fixed letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ p {
 
 #second {
     font-family: 'medium';
-    letter-spacing: 10px;
+    letter-spacing: 4px;
     color:  #ffffff;
     font-size: 16px;/* Approximation due to font substitution */
     font-weight: 500;
